k8s-templates/clouddo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clouddo-server
  namespace: test
  labels:
    app: clouddo-server
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clouddo-server
      tier: backend
  template:
    metadata:
      labels:
        app: clouddo-server
        tier: backend
    spec:
      containers:
      - name: k8s-example
        image: ygqbasic/clouddo-server
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8761
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: clouddo-server
  namespace: test
  labels:
    app: clouddo-server
    tier: backend
spec:
  selector:
    app: clouddo-server
    tier: backend
  ports:
  - port: 8761
    name: k8s-backend

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clouddo-server
  namespace: test
spec:
  rules:
  - host: clouddo-server.test.com
    http:
      paths:
      - backend:
          serviceName: clouddo-server
          servicePort: k8s-backend
